# colcon-ros-autotools

./: README.md  setup.cfg  stdeb.cfg
colcon_ros_autotools/package_identification/: autotools.py
colcon_ros_autotools/task/ament_autotools/: build.py
