[metadata]
name = colcon-ros-autotools
version = attr: colcon_ros_autotools.__version__
url = https://colcon.readthedocs.io
project_urls =
    GitHub = https://github.com/colcon/colcon-ros-autotools/
author = Christoph Hellmann Santos
author_email = christoph.hellmann.santos@ipa.fraunhofer.de
maintainer = Christoph Hellmann Santos
maintainer_email = christoph.hellmann.santos@ipa.fraunhofer.de
classifiers =
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to support autotools packages.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = colcon

[options]
install_requires =
  colcon-core
  colcon-cmake
  # to set an environment variable when a package installs a library
  colcon-library-path
packages = find:
zip_safe = true

[options.entry_points]
colcon_core.package_identification =
    ament_autotools = colcon_ros_autotools.package_identification.autotools:AutotoolsPackageIdentification
colcon_core.task.build =
    ament_autotools = colcon_ros_autotools.task.ament_autotools.build:AutotoolsBuildTask

[flake8]
import-order-style = google
